Revise README for JavaFX GradeBook project
Updated project title and summary, added program behavior details, and revised compilation instructions. Removed redundant sections and clarified key concepts demonstrated.